# ferry

./: .gitignore  Cargo.toml  README.md  deploy.sh  deploy.toml  ferry.toml
src/: config.rs  main.rs  resolve.rs  suggest.rs
